{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 529,
  "lineage": "edf8b6ea-6832-448e-6960-322f6cdad073",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "active",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:vpc/vpc-07eada29f65845ee1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dd5043be9049496e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ffacefd82a36d920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07eada29f65845ee1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06cc398e20bfebc8f",
            "owner_id": "687098277128"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:vpc/vpc-07eada29f65845ee1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dd5043be9049496e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ffacefd82a36d920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07eada29f65845ee1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06cc398e20bfebc8f",
            "owner_id": "687098277128"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04db3baadd8c971b1",
            "arn": "arn:aws:ec2:us-east-1:687098277128:elastic-ip/eipalloc-04db3baadd8c971b1",
            "association_id": "eipassoc-0aa9b6239550c26cb",
            "domain": "vpc",
            "id": "eipalloc-04db3baadd8c971b1",
            "instance": "i-019879fdbf90b0f17",
            "network_border_group": "us-east-1",
            "network_interface": "eni-037aa3cbdb9bdb7fa",
            "private_dns": "ip-10-40-1-223.ec2.internal",
            "private_ip": "10.40.1.223",
            "public_dns": "ec2-72-44-44-239.compute-1.amazonaws.com",
            "public_ip": "72.44.44.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "revogue-backend-eip",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-backend-eip",
              "Project": "revogue"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_instance.backend",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_subnets.selected",
            "data.aws_vpc.custom",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bae704550dedcc8",
            "arn": "arn:aws:ec2:us-east-1:687098277128:elastic-ip/eipalloc-03bae704550dedcc8",
            "association_id": "eipassoc-0d62e82f522be71e8",
            "domain": "vpc",
            "id": "eipalloc-03bae704550dedcc8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e5bef08f82e5858d",
            "private_dns": "ip-10-40-1-231.ec2.internal",
            "private_ip": "10.40.1.231",
            "public_dns": "ec2-34-203-175-82.compute-1.amazonaws.com",
            "public_ip": "34.203.175.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "revogue-nat-eip",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-nat-eip",
              "Project": "revogue"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074bb5e3c681b0735",
            "arn": "arn:aws:ec2:us-east-1:687098277128:instance/i-019879fdbf90b0f17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "revogue-ec2-profile",
            "id": "i-019879fdbf90b0f17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037aa3cbdb9bdb7fa",
            "private_dns": "ip-10-40-1-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.1.223",
            "public_dns": "ec2-72-44-44-239.compute-1.amazonaws.com",
            "public_ip": "72.44.44.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:687098277128:key/52d4a610-5fd4-4452-a04c-8dc3029de952",
                "throughput": 125,
                "volume_id": "vol-0377c9a52f6c8ccad",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089f9114aa113078f",
            "tags": {
              "Name": "revogue-backend",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-backend",
              "Project": "revogue"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de855cc296503868"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_subnets.selected",
            "data.aws_vpc.custom",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:internet-gateway/igw-07b8295b803352e21",
            "id": "igw-07b8295b803352e21",
            "owner_id": "687098277128",
            "tags": {
              "Name": "revogue-igw",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-igw",
              "Project": "revogue"
            },
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199",
            "arn_suffix": "app/revogue-alb-internal/189b281f50ce3199",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-revogue-alb-internal-756600465.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "revogue-alb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0df5341a378fe243a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0561670e5ab8a6d73"
              },
              {
                "subnet_id": "subnet-0d37fd7e276962d18"
              }
            ],
            "subnets": [
              "subnet-0561670e5ab8a6d73",
              "subnet-0d37fd7e276962d18"
            ],
            "tags": {
              "Name": "revogue-alb-internal",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-alb-internal",
              "Project": "revogue"
            },
            "vpc_id": "vpc-0422c6713997b337b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-public/d85bed18e5d1b593",
            "arn_suffix": "app/revogue-alb-public/d85bed18e5d1b593",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "revogue-alb-public-1825562550.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-public/d85bed18e5d1b593",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "revogue-alb-public",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fc2345fa4ad38414"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-089f9114aa113078f"
              },
              {
                "subnet_id": "subnet-09009945480ce0e9d"
              }
            ],
            "subnets": [
              "subnet-089f9114aa113078f",
              "subnet-09009945480ce0e9d"
            ],
            "tags": {
              "Name": "revogue-alb-public",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-alb-public",
              "Project": "revogue"
            },
            "vpc_id": "vpc-0422c6713997b337b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecs",
            "aws_security_group.alb_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ReVogue internal ALB — use path rules",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-public/d85bed18e5d1b593/ed11fc69d9e81b67",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-gateway-pub/38c2b6ee5efcbb61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-public/d85bed18e5d1b593/ed11fc69d9e81b67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-public/d85bed18e5d1b593",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecs",
            "aws_lb.public",
            "aws_lb_target_group.gateway_public",
            "aws_security_group.alb_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "internal_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cart",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-cart/bc28a5a08dac1ee4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/26706f1c64c25501",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cart",
                      "/cart/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/26706f1c64c25501",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "priority": 130,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.internal_http",
            "aws_lb_target_group.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "catalog",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-catalog/b100e98302225495",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/8e6e567258b3aebf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/catalog",
                      "/catalog/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/8e6e567258b3aebf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "priority": 120,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.internal_http",
            "aws_lb_target_group.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-frontend/21e10bd929afa709",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/483be82f99cd432b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/frontend",
                      "/frontend/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/483be82f99cd432b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "priority": 110,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.internal_http",
            "aws_lb_target_group.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-notification/5e682c046bf2ad25",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/387354a9bd507f54",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/notification",
                      "/notification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/387354a9bd507f54",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "priority": 160,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.internal_http",
            "aws_lb_target_group.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "order",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-order/48fc34fcb17d4e8e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/6d00d2f578fb4d8e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/order",
                      "/order/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/6d00d2f578fb4d8e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "priority": 140,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.internal_http",
            "aws_lb_target_group.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-payment/1afa9b248e61c8ff",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/c7186ac76be7cb44",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/payment",
                      "/payment/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener-rule/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1/c7186ac76be7cb44",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:listener/app/revogue-alb-internal/189b281f50ce3199/255c04e4bdb587f1",
            "priority": 150,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_listener.internal_http",
            "aws_lb_target_group.internal",
            "aws_security_group.alb_internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gateway_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-gateway-pub/38c2b6ee5efcbb61",
            "arn_suffix": "targetgroup/revogue-tg-gateway-pub/38c2b6ee5efcbb61",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-gateway-pub/38c2b6ee5efcbb61",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-public/d85bed18e5d1b593"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-gateway-pub",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-gateway-public",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-gateway-public",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cart",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-cart/bc28a5a08dac1ee4",
            "arn_suffix": "targetgroup/revogue-tg-cart/bc28a5a08dac1ee4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-cart/bc28a5a08dac1ee4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-cart",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-cart",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-cart",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "catalog",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-catalog/b100e98302225495",
            "arn_suffix": "targetgroup/revogue-tg-catalog/b100e98302225495",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-catalog/b100e98302225495",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-catalog",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-catalog",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-catalog",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-frontend/21e10bd929afa709",
            "arn_suffix": "targetgroup/revogue-tg-frontend/21e10bd929afa709",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-frontend/21e10bd929afa709",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-frontend",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-frontend",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-frontend",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-notification/5e682c046bf2ad25",
            "arn_suffix": "targetgroup/revogue-tg-notification/5e682c046bf2ad25",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-notification/5e682c046bf2ad25",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-notification",
            "port": 3005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-notification",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-notification",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "order",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-order/48fc34fcb17d4e8e",
            "arn_suffix": "targetgroup/revogue-tg-order/48fc34fcb17d4e8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-order/48fc34fcb17d4e8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-order",
            "port": 3003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-order",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-order",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-payment/1afa9b248e61c8ff",
            "arn_suffix": "targetgroup/revogue-tg-payment/1afa9b248e61c8ff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:687098277128:targetgroup/revogue-tg-payment/1afa9b248e61c8ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:687098277128:loadbalancer/app/revogue-alb-internal/189b281f50ce3199"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "revogue-tg-payment",
            "port": 3004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "revogue-tg-payment",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-tg-payment",
              "Project": "revogue"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bae704550dedcc8",
            "association_id": "eipassoc-0d62e82f522be71e8",
            "connectivity_type": "public",
            "id": "nat-02bffbac03aa66369",
            "network_interface_id": "eni-0e5bef08f82e5858d",
            "private_ip": "10.40.1.231",
            "public_ip": "34.203.175.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089f9114aa113078f",
            "tags": {
              "Name": "revogue-nat",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-nat",
              "Project": "revogue"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ecs",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:route-table/rtb-0423000d8e0db6d46",
            "id": "rtb-0423000d8e0db6d46",
            "owner_id": "687098277128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02bffbac03aa66369",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "revogue-private-rt-us-east-1a",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-private-rt-us-east-1a",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ecs",
            "aws_nat_gateway.ecs",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:route-table/rtb-0c458b665b1c590a1",
            "id": "rtb-0c458b665b1c590a1",
            "owner_id": "687098277128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02bffbac03aa66369",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "revogue-private-rt-us-east-1b",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-private-rt-us-east-1b",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ecs",
            "aws_nat_gateway.ecs",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:route-table/rtb-0296a32d30c7866c7",
            "id": "rtb-0296a32d30c7866c7",
            "owner_id": "687098277128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b8295b803352e21",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "revogue-public-rt",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-public-rt",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cafe5fe3062ccce7",
            "route_table_id": "rtb-0423000d8e0db6d46",
            "subnet_id": "subnet-0561670e5ab8a6d73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ecs",
            "aws_nat_gateway.ecs",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08025d69297cf7c1b",
            "route_table_id": "rtb-0c458b665b1c590a1",
            "subnet_id": "subnet-0d37fd7e276962d18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ecs",
            "aws_nat_gateway.ecs",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f2269b148bce6aa",
            "route_table_id": "rtb-0296a32d30c7866c7",
            "subnet_id": "subnet-089f9114aa113078f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecs",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ebbd1ceb94232f0",
            "route_table_id": "rtb-0296a32d30c7866c7",
            "subnet_id": "subnet-09009945480ce0e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecs",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-0df5341a378fe243a",
            "description": "Internal ALB for ECS microservices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df5341a378fe243a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b746aec3e021b12f"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc2345fa4ad38414"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "revogue-alb-internal-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-alb-internal-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-alb-internal-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-0fc2345fa4ad38414",
            "description": "Public ALB for API Gateway / internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc2345fa4ad38414",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "revogue-alb-public-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-alb-public-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-alb-public-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-0de855cc296503868",
            "description": "Security group for revogue NestJS backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de855cc296503868",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NestJS API",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "revogue-ec2-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-ec2-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-ec2-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.custom",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-0b746aec3e021b12f",
            "description": "ECS Fargate microservices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b746aec3e021b12f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df5341a378fe243a"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "revogue-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-ecs-tasks-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-ecs-tasks-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-0d1bb2f28e180989f",
            "description": "Allow PostgreSQL access to revogue RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1bb2f28e180989f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "revogue-rds-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-rds-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-rds-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.active",
            "data.aws_vpc.custom",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-087f4cb32238e77ec",
            "description": "Redis for ECS microservices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087f4cb32238e77ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b746aec3e021b12f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "revogue-redis-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-redis-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-redis-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:security-group/sg-07beab3a54474e751",
            "description": "API Gateway VPC Link ENIs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07beab3a54474e751",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "revogue-vpc-link-sg",
            "name_prefix": "",
            "owner_id": "687098277128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "revogue-vpc-link-sg",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-vpc-link-sg",
              "Project": "revogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_internal_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-554681677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0df5341a378fe243a",
            "security_group_rule_id": "sgr-00d9d116d8bd0d002",
            "self": false,
            "source_security_group_id": "sg-0b746aec3e021b12f",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_internal_from_public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-414258774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0df5341a378fe243a",
            "security_group_rule_id": "sgr-050e6efcdee35c0b5",
            "self": false,
            "source_security_group_id": "sg-0fc2345fa4ad38414",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.alb_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_tasks_from_internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-199125515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b746aec3e021b12f",
            "security_group_rule_id": "sgr-098621dd4f8836cba",
            "self": false,
            "source_security_group_id": "sg-0df5341a378fe243a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_tasks_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.40.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1465133539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b746aec3e021b12f",
            "security_group_rule_id": "sgr-09838170a4716afd6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from EC2 backend",
            "from_port": 5432,
            "id": "sgrule-1545517582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d1bb2f28e180989f",
            "security_group_rule_id": "sgr-08138b87505f7b345",
            "self": false,
            "source_security_group_id": "sg-0de855cc296503868",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_vpc.main",
            "data.aws_vpc.active",
            "data.aws_vpc.custom",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from ECS (cross-VPC if legacy RDS)",
            "from_port": 5432,
            "id": "sgrule-2061019076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d1bb2f28e180989f",
            "security_group_rule_id": "sgr-03c27292daa166b4e",
            "self": false,
            "source_security_group_id": "sg-0b746aec3e021b12f",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.rds",
            "aws_vpc.main",
            "data.aws_vpc.active",
            "data.aws_vpc.custom",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:subnet/subnet-0561670e5ab8a6d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0561670e5ab8a6d73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687098277128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "revogue-private-us-east-1a",
              "Project": "revogue",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "revogue-private-us-east-1a",
              "Project": "revogue",
              "Tier": "private"
            },
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:subnet/subnet-0d37fd7e276962d18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.40.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d37fd7e276962d18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687098277128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "revogue-private-us-east-1b",
              "Project": "revogue",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "revogue-private-us-east-1b",
              "Project": "revogue",
              "Tier": "private"
            },
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:subnet/subnet-089f9114aa113078f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089f9114aa113078f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "687098277128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "revogue-public-us-east-1a",
              "Project": "revogue",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "revogue-public-us-east-1a",
              "Project": "revogue",
              "Tier": "public"
            },
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:subnet/subnet-09009945480ce0e9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09009945480ce0e9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "687098277128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "revogue-public-us-east-1b",
              "Project": "revogue",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "revogue-public-us-east-1b",
              "Project": "revogue",
              "Tier": "public"
            },
            "vpc_id": "vpc-0422c6713997b337b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687098277128:vpc/vpc-0422c6713997b337b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-0d803142c1fff83a7",
            "default_route_table_id": "rtb-00f0e4dfd0148c291",
            "default_security_group_id": "sg-035d8b20f6aeba485",
            "dhcp_options_id": "dopt-0ffacefd82a36d920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0422c6713997b337b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f0e4dfd0148c291",
            "owner_id": "687098277128",
            "tags": {
              "Name": "revogue-vpc",
              "Project": "revogue"
            },
            "tags_all": {
              "Name": "revogue-vpc",
              "Project": "revogue"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}